Styled the help button on form textarea.
Added a right-padding to the textures to fit the icon without overlappin
g it with the text.

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -39,7 +39,8 @@ span.comments_count
       width: 555px
       margin: 0px
     textarea
-      width: 545px
+      width: 523px
+      padding-right: 25px
       display: block
       font-size: 13px
       height: 18px
@@ -358,10 +359,14 @@ form .upload_area
     textarea
       color: $clr_gray_80
       border: 1px solid $clr_gray_50
-      width: 543px
+      width: 518px
       height: 43px
       padding: 5px
+        right: 25px
       +rounded(3px)
+      display: block
+      float: left
+      clear: none
   .info_new_conversation
     display: block
     float: left
@@ -444,7 +449,7 @@ form .upload_area
   
 .help
   display: inline-block
-  float: right
-  clear: none
   position: absolute
-  border: 1px solid red
+  margin:
+    top: 5px
+    left: -22px
