--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -38,7 +38,11 @@
 .page_icon
   +hoverable_sprite_16px(16px*6, 0px, 16px, 16px)
 .style_icon
-  +hoverable_sprite_16px(16px*10, 0px, 16px, 16px)
+  //+hoverable_sprite_16px(16px*10, 0px, 16px, 16px)
+  background: url(/img_3_2/ico/edit-small-caps.png) no-repeat
+  height: 20px
+  width: 20px
+  display: block
 .static_tick_icon
   display: inline-block
   +sprite_16px(16px*4, 16px, 16px, 16px)
