Created a 75px wide blue button style
Since Save changes to Sending… I had to make it wider so it fits.

--- a/app/styles/_buttons.sass
+++ b/app/styles/_buttons.sass
@@ -113,6 +113,17 @@ a.add_button, a.new_task_list_link
     background-position-y: -196px
     span
       background-position-y: -196px
+      
+.button_blue_75
+  @extend .button_blue
+  width: 75px
+  background-position: -50px -112px
+  text-align: center
+  color: $clr_blue_a
+  float: right
+  display: inline-block
+  padding: 0
+
 
 input.button_blue
   border: none
