--- a/app/templates/partials/comment_form_simple.jade.erb
+++ b/app/templates/partials/comment_form_simple.jade.erb
@@ -14,7 +14,7 @@ input(type="hidden", name='simple', value='true')
       input#field_projects(autocomplete="on", :placeholder="Select a project",type="text" )
       a.dropdown_arrow(href="#")
       ol.select_project.dropdown_autocomplete
-  input.button_blue.submit(name= 'commit', type= 'submit', data-disable-with= '<%= t('comments.new.sending') %>', value= '<%= t('common.save')%>')
+  input.button_blue_75.submit(name= 'commit', type= 'submit', data-disable-with= '<%= t('comments.new.sending') %>', value= '<%= t('common.save')%>')
   .google_docs_attachment_form_area(data-object-name= 'comments_attributes[0]')
     .fields
     ul.file_list
