--- a/app/templates/partials/comment_form_simple.jade.erb
+++ b/app/templates/partials/comment_form_simple.jade.erb
@@ -7,13 +7,7 @@ input(type="hidden", name='simple', value='true')
   span.help
     a(href= '/text_styles', class= 'style_icon', rel= 'facebox', title= '<%= t('projects.show.text_styling')%>')
 .info_new_conversation
-  .dropdown_projects
-    label.info_label(for="field_projects") Comment on
-    div
-      input.project_id(type="hidden", name='project_id')
-      input#field_projects(autocomplete="on", :placeholder="Select a project",type="text" )
-      a.dropdown_arrow(href="#")
-      ol.select_project.dropdown_autocomplete
+  != self.partial('partials.dropdown', {name: 'project', attr: 'project_id', placeholder: '<%= t('people.column.select_project') %>', label_msg: '<%= t("comments.new.comment_on_project") %>'})
   input.button_blue_75.submit(name= 'commit', type= 'submit', data-disable-with= '<%= t('comments.new.sending') %>', value= '<%= t('common.save')%>')
   .google_docs_attachment_form_area(data-object-name= 'comments_attributes[0]')
     .fields
