Fixed margin of Save button, in comment form

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -59,12 +59,14 @@ span.comments_count
       padding: 2px 4px
       margin-right: 1em
   .new_extra
-    display: block
+    display: inline-block
     padding-left: 47px
     width: 555px
     .button_blue
       float: right
-      margin-right: 1px
+      margin:
+        right: 1px
+        top: 12px
     .new_comment_actions
       margin: 0
         bottom: 0
