Styled Log Hours button to comment menu

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -98,6 +98,10 @@ span.comments_count
           background-position-x: -62px
         a.btn_lock
           background-position-x: -93px
+        a.btn_hours
+          background-position-y: -168px
+          &:active
+            background-position-y: -196px
 
 .info_new_conversation
   .new_comment_actions
