--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -60,12 +60,15 @@ span.comments_count
       margin-right: 1em
   .new_extra
     display: inline-block
-    padding-left: 47px
-    width: 555px
+    padding-left: 0
+    //47px
+    width: 100%
+    .convert_to_task
+      margin-left: 47px
     .button_blue
       float: right
       margin:
-        right: 1px
+        right: 18px
         top: 12px
     .new_comment_actions
       margin: 0
