Dropdownify task assigned_id and status selects

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -317,7 +317,7 @@ form .upload_area
   max-height: 480px
   max-width: 385px
 
-#new_conversation_form
+#new_conversation_form, .new_comment
   display: block
   float: left
   clear: both
@@ -402,7 +402,7 @@ form .upload_area
       +rounded-bottom(3px)
       &.selected
         background-color: $clr_gray_10
-  .dropdown_projects
+  .dropdown
     color: $clr_gray_80
     display: block
     float: left
