--- a/app/templates/partials/dropdown.jade.erb
+++ b/app/templates/partials/dropdown.jade.erb
@@ -1,5 +1,5 @@
 - var field_name = "field_" + self.name + "s";
-div(class="dropdown_" + self.name + "s")
+div(class="dropdown dropdown_" + self.name)
   label.info_label(for=field_name)= self.label_msg
   div
     input(class=self.attr, type="hidden", name=self.attr)
