Revert "Fixed "More actions" span problem"
This reverts commit f0e0958bc479375b4a10112b78add2a4e2265bc1.

--- a/app/templates/partials/comment_form_simple.jade.erb
+++ b/app/templates/partials/comment_form_simple.jade.erb
@@ -13,9 +13,8 @@ input(type="hidden", name='simple', value='true')
     .fields
     ul.file_list
   .new_comment_actions_div
+    span.info_label More actions
     ol.new_comment_actions
-      li.info_label
-        span More actions
       li
         a.btn_attach(href= '#uploads', class= 'attach_icon hoverable', title= '<%= t('uploads.tooltip')%>')
       li
