Styled user name, dates and arrows on comments

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -286,9 +286,8 @@ form .upload_area
     .body
       .before
         display: inline
-      a.user, a.project
-        text-decoration: none
-        font-weight: bold
+        .user, .project
+
       .before:first-child+p
         display: inline
         img
