--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -56,6 +56,19 @@ textarea.placeholder, input.placeholder
       margin-right: 3px
     .task_status
       margin-top: 5px
+      float: left
+    .user, .project
+      text-decoration: none
+      font-weight: bold
+      float: left
+      clear: right
+      margin: 5px 5px 0 0
+    .assigned_date
+      margin: 4px 3px 0 0
+    .arr
+      float: left
+      clear: none
+      margin-top: 5px
   h1, h2
     font-size: 16px
     border-bottom: 0
